# jowi-process

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cc
assets/: read.txt
src/: argument.cc  argument.ccm  asio.cc  env.ccm  io.ccm  main.cc  process.cc  process.ccm  result.ccm  subprocess.cc  subprocess_argument.cc  subprocess_env.cc  subprocess_error.cc  subprocess_result.cc  unique_pid.cc  variant_error.ccm
src/platform/unix/: subprocess.cc  subprocess_result.cc  unique_pid.cc
src/platform/windows/: subprocess.cc  subprocess_result.cc  unique_pid.cc
tests/: io_tests.cpp  sock_test.cpp  test_child.cpp  tests.cpp
